--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
-<body style="background-image: url(https://source.unsplash.com/RFHFV7lVQBY/1600x900);">
+<!--<body th:style ="${background-image: url(https://source.unsplash.com/RFHFV7lVQBY/1600x900);}">-->
+<body th:style="${citatObrazek}">
 <blockquote th:text="${citatText}"><strong>Debugging</strong> /de·bugh·ing/ <em>verb</em><br/>The Classic Mystery Game where you are the detective, the victim, and the murderer.</blockquote>
 </body>
 </html>
